...
    val isGenreMenuExpanded: Boolean = false,
    val isLabelMenuExpanded: Boolean = false,
    val isSubmitting: Boolean = false,
    val errorMessage: String? = null
) {
    companion object {
        val genres = listOf("Classical", "Salsa", "Rock", "Folk")
        val recordLabels = listOf(
            "Sony Music",
            "EMI",
            "Discos Fuentes",
            "Elektra",
            "Fania Records"
...
